--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <body>
     <app-header></app-header>
-    <div>
+    <div style="position: relative;">
         <app-expansion-panel-left [open]="true" class="float panel-left"></app-expansion-panel-left>
         <app-expansion-panel-right [open]="true" class="float panel-right"></app-expansion-panel-right>
         <app-map></app-map>
