--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
@@ -1,5 +1,5 @@
 <div class="panel-left">
-    <div *ngIf="open && !showAbout">
+    <div class="panel-left-container" *ngIf="open && !showAbout">
         <div class="panel-left-open">
             <div class="form-row">
                 <div class="segment-status" (click)="backToHMS()">Back to HMS</div>
