--- a/src/app/components/output/table/table.component.html
+++ b/src/app/components/output/table/table.component.html
@@ -1,17 +1,14 @@
 <div class="container">
-  <div></div>
   <div class="table-container">
-    <table mat-table [dataSource]="dataSource" style="height: 100%; width: 100%;" matSort>
-      <ng-container *ngFor="let col of columnNames" [matColumnDef]="col">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col}}</th>
-        <td mat-cell *matCellDef="let row">{{row[col]}}</td>
+    <table cdk-table [dataSource]="dataSource" style="height: 100%; width: 100%;" cdkSort>
+      <ng-container *ngFor="let col of columnNames" [cdkColumnDef]="col">
+        <th cdk-header-cell *cdkHeaderCellDef cdk-sort-header>{{col}}</th>
+        <td cdk-cell *cdkCellDef="let row">{{row[col]}}</td>
       </ng-container>
-      <tr mat-header-row *matHeaderRowDef="columnNames; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: columnNames;"></tr>
+      <tr class="header" cdk-header-row *cdkHeaderRowDef="columnNames; sticky: true"></tr>
+      <tr cdk-row *cdkRowDef="let row; columns: columnNames;"></tr>
     </table>
   </div>
-  <button mat-flat-button class="export" disableRipple="true" (click)="download()">Export
-    (.csv)</button>
-  <mat-paginator style="border-radius: 5px;" [pageSizeOptions]="[5, 10, 20, dataSource.data.length]"
+  <mat-paginator style="border-radius: 5px;" [pageSizeOptions]="[10, 20, 50, dataSource.data.length]"
     showFirstLastButtons></mat-paginator>
 </div>
