--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -51,10 +51,10 @@
     </div> -->
 
     <div><strong>Loadings</strong></div>
-    <div class="scroll-pane list-short section-item" *ngIf="sources.length">
+    <div class="scroll-pane list-short section-item" #loadingsList>
       <div *ngFor="let source of sources" class="button">
           <div class="loading-button">
-            <div class="vertical-center">{{ source.origin }} {{ source.dataType }}: {{ source.type }}</div>
+            <div class="vertical-center">{{ source.origin }} - {{ source.dataType }}: {{ source.type }}</div>
             <mat-icon title="Remove Source" (click)="removeSource(source)">delete</mat-icon>
           </div>
       </div>
@@ -68,7 +68,7 @@
     </div>
     <div *ngIf="!addingSource && !addingParameter" class="button" (click)="addSegmentLoadings()">Apply Segment Settings</div>
 
-    <div *ngIf="addingParameter" class="segment-form" [formGroup]="parameterForm" >
+    <!-- <div *ngIf="addingParameter" class="segment-form" [formGroup]="parameterForm" >
       <strong>New Parameter</strong>
       <div class="form-row">
         <label>Use Constant Loading? </label>
@@ -113,26 +113,26 @@
         <div class="button" (click)="cancelAdd()">Cancel</div>
         <div class="button" (click)="insertParameter()">Add Parameter</div>
       </div>
-    </div>
+    </div> -->
 
-    <div *ngIf="addingSource" class="segment-form" [formGroup]="sourceForm" >
+    <div *ngIf="addingSource" class="segment-form section-item" [formGroup]="sourceForm" >
         <strong>New Loading</strong>
         <div class="form-row">
-            <div>Loading Origin</div>
+            <div>Input/Loading Origin</div>
             <select formControlName="sourceOrigin">
-                <option *ngIf="isBoundary">Boundary</option>
-                <option>Point Source</option>
-                <option>Non-Point Source</option>
+                <option *ngIf="isBoundary">Boundary in mg/L</option>
+                <option>Point Source in g/day</option>
+                <option>Non-Point Source in g/day</option>
             </select>
         </div>
         <div class="form-row">
-            <div>Loading Type</div>
+            <div>Input/Loading Type</div>
             <select formControlName="sourceType">
                 <option *ngFor="let type of sourceTypes">{{ type.displayName }}</option> 
             </select>
         </div>
         <div class="form-row">
-            <div>Loading Rate</div>
+            <div>Input/Loading Rate</div>
             <select formControlName="useConstLoadings" (click)="selectRate()">
                 <option>Constant</option>
                 <option>Time-series</option>
@@ -140,11 +140,11 @@
         </div>
         <div class="section-item" *ngIf="loadingRate == 'Constant'">
             <div class="form-row">
-                <div><label>Constant Loading Value</label></div>
+                <div><label>Input/Loading Value</label></div>
                 <div><input formControlName="constLoadingValue" type="number" class="input-number"></div>
             </div>
             <div class="form-row">
-                <div><label>Loading Multiplier</label></div>
+                <div><label>Input/Loading Multiplier</label></div>
                 <input formControlName="constLoadingMulti" type="number" class="input-number">
             </div>
         </div>
