--- a/src/app/components/output/execution-panel/execution-panel.component.css
+++ b/src/app/components/output/execution-panel/execution-panel.component.css
@@ -1,4 +1,10 @@
 :host {
     min-height: 0;
-    overflow-y: auto;
+}
+
+.execution-container {
+    display: grid;
+    grid-template-rows: auto auto 1fr auto;
+    min-height: 0;
+    max-height: 100%;
 }
