--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -23,3 +23,9 @@
 table, td {
     border: 1px solid var(--main-border);
 }
+
+.container-item { 
+    min-height: 0;
+    height: 100%;
+    padding: 0;
+}
