--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -10,6 +10,7 @@ body {
 }
 
 .panel-left {
+    pointer-events: none;
     top: inherit;
     left: 0;
     height: 100%;
@@ -20,6 +21,8 @@ body {
 .panel-right {
     top: inherit;
     right: 0;
+    min-height: 0;
+    height: 100%;
 }
 
 app-footer {
