--- a/src/app/components/output/execution-panel/execution-panel.component.html
+++ b/src/app/components/output/execution-panel/execution-panel.component.html
@@ -1,4 +1,4 @@
-<div class="container-item">
+<div class="execution-container container-item">
     <div>
         <div>Simulation Status: {{ simStatus }}</div>
         <div>{{ status_message }}</div>
@@ -7,14 +7,17 @@
         <mat-progress-bar mode="indeterminate"></mat-progress-bar>
     </div>
     <app-segment-status-list></app-segment-status-list>
-    <div *ngIf="simComplete && simStatus !== 'FAILED'">
-        <div class="button ready" (click)="gotoOutput()">Examine Output</div>
-        <div class="button ready" (click)="downloadSimResults()" [class.disabled]="simComplete && simStatus == 'COMPLETED'">Download Data</div>
-        
-        <div *ngIf="downloading" class="centered">Preparing .zip file for download</div>
-        <div class="button" *ngIf="waiting">
-            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    <div>
+        <div *ngIf="simComplete && simStatus !== 'FAILED'">
+            <div class="button ready" (click)="gotoOutput()">Examine Output</div>
+            <div class="button ready" (click)="downloadSimResults()"
+                [class.disabled]="simComplete && simStatus == 'COMPLETED'">Download Data</div>
+
+            <div *ngIf="downloading" class="centered">Preparing .zip file for download</div>
+            <div class="button" *ngIf="waiting">
+                <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+            </div>
         </div>
+        <div class="button" *ngIf="!simComplete" (click)="cancelExecution()">Cancel Simulation Execution</div>
     </div>
-    <div class="button" *ngIf="!simComplete" (click)="cancelExecution()">Cancel Simulation Execution</div>
 </div>
