implement segment source types by json flags

--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -72,23 +72,23 @@
                         <div class="centered"><strong>Variable Selection</strong></div>
                         <div id="nitrogen" *ngIf="AQTModule == 'nitrogen' || AQTModule == 'nutrients' || AQTModule == 'organic' || AQTModule == 'organic-nop'">
                             <div><strong>Nitrogen</strong></div>
-                            <div>Total N <input type="radio" name="nType" formControlName="nType" value="total" /></div>
+                            <div>Total N <input type="radio" name="nType" formControlName="nType" value="Total N" /></div>
                             <div>Separate Nitrogen Components <input type="radio" name="nType" formControlName="nType" value="separate" /></div>
                             <div *ngIf="separateNitrogen">
-                                <div>Total Ammonia as N <input type="checkbox" formControlName="ammonia" /></div>
-                                <div>Nitrate as N <input type="checkbox" formControlName="nitrate" /></div>
+                                <div>Total Ammonia as N <input type="checkbox" formControlName="Total Ammonia as N" /></div>
+                                <div>Nitrate as N <input type="checkbox" formControlName="Nitrate as N" /></div>
                             </div>
                         </div>
                         <div id="phosphorus" *ngIf="AQTModule == 'phosphorus' || AQTModule == 'nutrients' || AQTModule == 'organic'">
                             <div><strong>Phosphorus</strong></div>
-                            <div>Total P <input type="radio" name="pType" formControlName="pType" value="total" /></div>
-                            <div>Total Soluble P <input type="radio" name="pType" formControlName="pType" value="soluable" /></div>
+                            <div>Total P <input type="radio" name="pType" formControlName="pType" value="Total P" /></div>
+                            <div>Total Soluble P <input type="radio" name="pType" formControlName="pType" value="Total Soluble P" /></div>
                         </div>
                         <div id="organic" *ngIf="AQTModule == 'organic' || AQTModule == 'organic-nop'">
                             <div><strong>Organic Matter</strong></div>
-                            <div>Organic Matter <input type="radio" name="orgType" formControlName="orgType" value="matter" /></div>
-                            <div>Organic Carbon <input type="radio" name="orgType" formControlName="orgType" value="carbon" /></div>
-                            <div>CBOD <input type="radio" name="orgType" formControlName="orgType" value="cbod" /></div>
+                            <div>Organic Matter <input type="radio" name="orgType" formControlName="orgType" value="Organic Matter" /></div>
+                            <div>Organic Carbon <input type="radio" name="orgType" formControlName="orgType" value="Organic Carbon" /></div>
+                            <div>CBOD <input type="radio" name="orgType" formControlName="orgType" value="CBOD" /></div>
                         </div>
                     </div>
                     <div class="button" (click)="getBaseJSONByFlags()">Setup Simulation</div>
