update output about doc for export button location

--- a/src/app/components/output/about-output/about-output.component.html
+++ b/src/app/components/output/about-output/about-output.component.html
@@ -90,8 +90,8 @@
                     <tr>
                         <td>Export Button</td>
                         <td>
-                            Located on the bottom left of the container and only displayed when the table is.
-                            Exports the table to a CSV file.
+                            Located in the menu for the container and only displayed when the table is.
+                            Exports the data in the table to a .csv file.
                         </td>
                     </tr>
                     <tr>
