--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -52,7 +52,7 @@
 
     <div><strong>Loadings</strong></div>
     <div class="scroll-pane list-short section-item" id="loadingsList">
-      <div *ngFor="let source of sources" class="button" (changes)="autoScrollUp()">
+      <div *ngFor="let source of sources" class="button">
           <div class="loading-button">
             <div class="vertical-center">{{ source.origin }} - {{ source.dataType }}: {{ source.type }}</div>
             <mat-icon title="Remove Source" (click)="removeSource(source)">delete</mat-icon>
