--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -27,6 +27,15 @@
 
     <div [formGroup]="svForm" class="section-item">
         <div><strong>Segment State Variable Initial Values</strong></div>
+        <div class="form-row" *ngFor="let variable of userAvailableVars">
+            <div>{{ variable.displayName }}</div>
+            <div class="vertical-center">
+                <div>
+                    <input type="number" class="input-number" matTooltip="{{ variable.longName }}"/> 
+                    {{ variable.unit }}
+                </div>
+            </div>
+        </div>
         <div class="form-row" *ngFor="let svField of basicFields.sv">
             <div>{{ svField.displayName }}</div>
             <div class="vertical-center">
