--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -138,27 +138,6 @@
                                 Solver Step Size of (0.1-1.0)<div><input type="number" class="input-number"
                                         formControlName="fixStepSize" /> / day</div>
                             </div>
-                            <div class="advanced-settings-toggle">
-                                <div class="vertical-center">Advanced</div>
-                                <mat-icon class="icon-panel-toggle"
-                                    matTooltip="See Advanced Options NOT YET IMPLEMENTED"
-                                    (click)="toggleAdvanced('pSetup')">expand_more</mat-icon>
-                            </div>
-                            <div class="section-item" *ngIf="showPSetupAdvanced && advancedFields.pSetup.length">
-                                <div class="form-row" *ngFor="let pSetupField of advancedFields.pSetup">
-                                    <div>{{ pSetupField.displayName }}</div>
-                                    <div class="vertical-center">
-                                        <div>
-                                            <input type="number" class="input-number"
-                                                formControlName="{{ pSetupField.param }}"
-                                                matTooltip="{{ pSetupField.param }}" />
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="section-item" *ngIf="showPSetupAdvanced && !advancedFields.pSetup.length">
-                                <div class="centered">There are currently no advanced options available</div>
-                            </div>
                         </div>
                     </div>
 
@@ -171,25 +150,6 @@
                             </div>
                             <div>
                                 <input type="text" formControlName="SiteName">
-                            </div>
-                        </div>
-                        <div class="section-item">
-                            <div class="form-row">
-                            </div>
-                            <div>Advanced<mat-icon class="icon-panel-toggle" matTooltip="See Advanced Options NOT YET IMPLEMENTED"
-                                (click)="toggleAdvanced('locale')">expand_more</mat-icon></div>
-                            <div class="section-item" *ngIf="showLocaleAdvanced">
-                                <div class="form-row" *ngFor="let localeField of advancedLocaleFields">
-                                    <div>{{ localeField.displayName }}</div>
-                                    <div class="vertical-center">
-                                        <div>
-                                            <input type="number" class="input-number" formControlName="{{ localeField.param }}" matTooltip="{{ localeField.param }}"/>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="section-item" *ngIf="showLocaleAdvanced && !advancedLocaleFields.length">
-                                <div class="centered">There are currently no advanced options available</div>
                             </div>
                         </div>
                     </div> -->
@@ -210,32 +170,20 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="advanced-settings-toggle">
-                            <div class="vertical-center">Advanced</div>
-                            <mat-icon class="icon-panel-toggle" matTooltip="See Advanced Options NOT YET IMPLEMENTED"
-                                (click)="toggleAdvanced('remin')">expand_more</mat-icon>
-                        </div>
-                        <div class="section-item" *ngIf="showReminAdvanced">
-                            <div class="form-row" *ngFor="let reminField of advancedFields.remin">
-                                <div>{{ reminField.displayName }}</div>
-                                <div class="vertical-center">
-                                    <div>
-                                        <input type="number" class="input-number"
-                                            formControlName="{{ reminField.param }}"
-                                            matTooltip="{{ reminField.longName }}" />
-                                        {{ reminField.unit }}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="section-item" *ngIf="showReminAdvanced && !advancedFields.remin.length">
-                            <div class="centered">There are currently no advanced options available</div>
-                        </div>
                     </div>
 
                     <!-- S.V. Section -->
                     <div [formGroup]="svForm" class="section-item">
                         <div><strong>State Variable Initial Values</strong></div>
+                        <div class="form-row" *ngFor="let variable of userSelectedVars">
+                            <div>{{ variable.displayName }}</div>
+                            <div class="vertical-center">
+                                <div>
+                                    <input type="number" class="input-number" matTooltip="{{ variable.longName }}"/> 
+                                    {{ variable.unit }}
+                                </div>
+                            </div>
+                        </div>
                         <div class="section-item">
                             <div class="form-row" *ngFor="let svField of basicFields.sv">
                                 <div>{{ svField.displayName }}</div>
@@ -248,27 +196,30 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="advanced-settings-toggle">
-                            <div class="vertical-center">Advanced</div>
-                            <mat-icon class="icon-panel-toggle" matTooltip="See Advanced Options NOT YET IMPLEMENTED"
-                                (click)="toggleAdvanced('sv')">expand_more</mat-icon>
-                        </div>
-                        <div class="section-item" *ngIf="showSVAdvanced">
-                            <div class="form-row" *ngFor="let svField of advancedFields.sv">
-                                <div>{{ svField.displayName }}</div>
-                                <div class="vertical-center">
-                                    <div>
-                                        <input type="number" class="input-number" formControlName="{{ svField.param }}"
-                                            matTooltip="{{ svField.longName }}" />
-                                        {{ svField.unit }}
-                                    </div>
+                    </div>
+
+                    <!-- Advanced Setup Section -->
+                    <div class="advanced-settings-toggle">
+                        <div class="vertical-center"><strong>Advanced Setup </strong></div>
+                        <mat-icon class="icon-panel-toggle" matTooltip="Advanced Setup NOT YET IMPLEMENTED"
+                            (click)="toggleAdvanced('sv')">expand_more</mat-icon>
+                    </div>
+                    <div class="section-item" *ngIf="showSVAdvanced">
+                        <div class="form-row" *ngFor="let svField of advancedFields.sv">
+                            <div>{{ svField.displayName }}</div>
+                            <div class="vertical-center">
+                                <div>
+                                    <input type="number" class="input-number" formControlName="{{ svField.param }}"
+                                        matTooltip="{{ svField.longName }}" />
+                                    {{ svField.unit }}
                                 </div>
                             </div>
                         </div>
-                        <div class="section-item" *ngIf="showSVAdvanced && !advancedFields.sv.length">
-                            <div class="centered">There are currently no advanced options available</div>
-                        </div>
                     </div>
+                    <div class="section-item" *ngIf="showSVAdvanced && !advancedFields.sv.length">
+                        <div class="centered">There are currently no advanced setup options available</div>
+                    </div>
+
                     <div class="button" (click)="applyGlobalSettings()">Apply Settings</div>
                 </div>
             </div>
